# esp-led-control-rs

./: Cargo.toml  README.md  gpio_config.yaml  partitions.csv
.cargo/: config.toml
http/: index.html
src/: gpio_config.rs  init_web_server.rs  main.rs  nvs.rs  pwm.rs  rest_web_server.rs  wifi.rs
