[package]
name = "esp-led-control-rs"
version = "0.1.0"
authors = ["jury"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.3", default-features = false }
esp-idf-hal = { version = "0.42.5" }
anyhow = { version = "1.0" }
embedded-time = { version = "0.12.1" }
serde = "1.0"
serde_json = "1.0"
embedded-svc = "0.26.4"
lazy_static = "1.4.0"
serde_yaml = "0.9.29"
once_cell = "1.19.0"

[build-dependencies]
embuild = "0.31.3"

[package.metadata.espflash]
partition_table = "partitions.csv" # Supports CSV and binary formats
